--- a/Time_Series_Sales_Forecast.ipynb
+++ b/Time_Series_Sales_Forecast.ipynb
@@ -33,7 +33,7 @@
         "id": "zlx2sjqJNQtP"
       },
       "source": [
-        "In this time series, we will explore a dataset with trend and seasonality. We will then use ARIMA to do a forecast."
+        "In this time series, we will explore a dataset with trend and seasonality. We will then use ARIMA to do a forecast. Dataset can be downloaded fom Kaggle, Perrin Freres Monthly Champagne Sales"
       ]
     },
     {
