--- a/pyspark_guide.ipynb
+++ b/pyspark_guide.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "pyspark guide",
       "provenance": [],
-      "authorship_tag": "ABX9TyPtU4GI+KMaWts05RAa6VIu",
+      "authorship_tag": "ABX9TyM32F3SCqxZw0xTrWnKTzSA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1191,101 +1191,658 @@
     {
       "cell_type": "code",
       "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "V_yMezLLZdWx"
-      },
-      "execution_count": 195,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
+        " spark=SparkSession.builder.appName('Agg').getOrCreate()"
       ],
       "metadata": {
         "id": "-IF22WdcZdZc"
       },
-      "execution_count": 195,
+      "execution_count": 207,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "spark"
       ],
       "metadata": {
-        "id": "L13X0_XIZdcH"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 219
+        },
+        "id": "L13X0_XIZdcH",
+        "outputId": "fee0bb20-b5a1-4c6c-b4d2-e06afc86162b"
       },
-      "execution_count": 195,
-      "outputs": []
+      "execution_count": 208,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "\n",
+              "            <div>\n",
+              "                <p><b>SparkSession - in-memory</b></p>\n",
+              "                \n",
+              "        <div>\n",
+              "            <p><b>SparkContext</b></p>\n",
+              "\n",
+              "            <p><a href=\"http://87462b8dbdab:4040\">Spark UI</a></p>\n",
+              "\n",
+              "            <dl>\n",
+              "              <dt>Version</dt>\n",
+              "                <dd><code>v3.2.0</code></dd>\n",
+              "              <dt>Master</dt>\n",
+              "                <dd><code>local[*]</code></dd>\n",
+              "              <dt>AppName</dt>\n",
+              "                <dd><code>Practice</code></dd>\n",
+              "            </dl>\n",
+              "        </div>\n",
+              "        \n",
+              "            </div>\n",
+              "        "
+            ],
+            "text/plain": [
+              "<pyspark.sql.session.SparkSession at 0x7f5ab3239f10>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 208
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "df_pyspark3=spark.read.csv('/content/sample_data/test3.csv', header=True, inferSchema=True)"
       ],
       "metadata": {
         "id": "7I4bpk8eZde0"
       },
-      "execution_count": 195,
+      "execution_count": 210,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "df_pyspark3.show()"
       ],
       "metadata": {
-        "id": "z6hGRv5qZdhd"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "z6hGRv5qZdhd",
+        "outputId": "ad762191-844c-4637-fb57-a35a2b8de19e"
       },
-      "execution_count": 195,
+      "execution_count": 211,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---------+------------+------+\n",
+            "|     Name| Departments|salary|\n",
+            "+---------+------------+------+\n",
+            "|    Krish|Data Science| 10000|\n",
+            "|    Krish|         IOT|  5000|\n",
+            "|   Mahesh|    Big Data|  4000|\n",
+            "|    Krish|    Big Data|  4000|\n",
+            "|   Mahesh|Data Science|  3000|\n",
+            "|Sudhanshu|Data Science| 20000|\n",
+            "|Sudhanshu|         IOT| 10000|\n",
+            "|Sudhanshu|    Big Data|  5000|\n",
+            "|    Sunny|Data Science| 10000|\n",
+            "|    Sunny|    Big Data|  2000|\n",
+            "+---------+------------+------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_pyspark3.printSchema()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FgfFnVIqZdkG",
+        "outputId": "67809064-b585-4938-b860-3ff6eb8d3e4a"
+      },
+      "execution_count": 212,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "root\n",
+            " |-- Name: string (nullable = true)\n",
+            " |-- Departments: string (nullable = true)\n",
+            " |-- salary: integer (nullable = true)\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#groupby total salary per person\n",
+        "df_pyspark3.groupBy('Name').sum().show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CGxEyND-Zdmr",
+        "outputId": "650d96cb-57a0-49ad-8af8-a5d8346c5ea6"
+      },
+      "execution_count": 220,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---------+-----------+\n",
+            "|     Name|sum(salary)|\n",
+            "+---------+-----------+\n",
+            "|Sudhanshu|      35000|\n",
+            "|    Sunny|      12000|\n",
+            "|    Krish|      19000|\n",
+            "|   Mahesh|       7000|\n",
+            "+---------+-----------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#groupby mean salary per dept\n",
+        "df_pyspark3.groupBy('Departments').mean().show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "e7zaQXRqHYjo",
+        "outputId": "e7316fa0-5190-4f36-a38b-a46184f3d89d"
+      },
+      "execution_count": 223,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+------------+-----------+\n",
+            "| Departments|avg(salary)|\n",
+            "+------------+-----------+\n",
+            "|         IOT|     7500.0|\n",
+            "|    Big Data|     3750.0|\n",
+            "|Data Science|    10750.0|\n",
+            "+------------+-----------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#groupby department total count\n",
+        "df_pyspark3.groupBy('Departments').count().show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dvTyctVbHYmF",
+        "outputId": "0fc5f394-d867-4cf2-d8de-99e067830bea"
+      },
+      "execution_count": 224,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+------------+-----+\n",
+            "| Departments|count|\n",
+            "+------------+-----+\n",
+            "|         IOT|    2|\n",
+            "|    Big Data|    4|\n",
+            "|Data Science|    4|\n",
+            "+------------+-----+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#total salary\n",
+        "df_pyspark3.agg({'Salary':'sum'}).show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6RDh4PcCHYoL",
+        "outputId": "5f21372c-14c6-494f-b566-9ee76bf2383d"
+      },
+      "execution_count": 225,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-----------+\n",
+            "|sum(Salary)|\n",
+            "+-----------+\n",
+            "|      73000|\n",
+            "+-----------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#groupby max salary per person\n",
+        "df_pyspark3.groupBy('Name').max().show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TsUUWw9yHYqj",
+        "outputId": "0880f49d-54a3-4391-9b60-036a9b38e13f"
+      },
+      "execution_count": 226,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---------+-----------+\n",
+            "|     Name|max(salary)|\n",
+            "+---------+-----------+\n",
+            "|Sudhanshu|      20000|\n",
+            "|    Sunny|      10000|\n",
+            "|    Krish|      10000|\n",
+            "|   Mahesh|       4000|\n",
+            "+---------+-----------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Linear Regression"
+      ],
+      "metadata": {
+        "id": "370A4RzkJ4hr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "spark=SparkSession.builder.appName('Missing').getOrCreate()"
+      ],
+      "metadata": {
+        "id": "USYpoIfTHYsy"
+      },
+      "execution_count": 228,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "training=spark.read.csv('/content/sample_data/test1.csv', header=True,inferSchema=True)"
       ],
       "metadata": {
-        "id": "FgfFnVIqZdkG"
+        "id": "qS4IxwIUMo3p"
       },
-      "execution_count": 195,
+      "execution_count": 230,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "training.show()"
       ],
       "metadata": {
-        "id": "CGxEyND-Zdmr"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "O-EjRz2VMo5z",
+        "outputId": "59969eb4-3687-4bb6-9416-4efc1b9557e3"
       },
-      "execution_count": 195,
+      "execution_count": 231,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---------+---+----------+------+\n",
+            "|     Name|age|Experience|Salary|\n",
+            "+---------+---+----------+------+\n",
+            "|    Krish| 31|        10| 30000|\n",
+            "|Sudhanshu| 30|         8| 25000|\n",
+            "|    Sunny| 29|         4| 20000|\n",
+            "|     Paul| 24|         3| 20000|\n",
+            "|   Harsha| 21|         1| 15000|\n",
+            "|  Shubham| 23|         2| 18000|\n",
+            "+---------+---+----------+------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "training.printSchema()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "50ayFMS4Mo7_",
+        "outputId": "86d77e1b-2ed5-46fe-bf62-97deb8f97a16"
+      },
+      "execution_count": 232,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "root\n",
+            " |-- Name: string (nullable = true)\n",
+            " |-- age: integer (nullable = true)\n",
+            " |-- Experience: integer (nullable = true)\n",
+            " |-- Salary: integer (nullable = true)\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "training.columns"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EofQJrH_Nt-C",
+        "outputId": "ccdb8166-3693-49ff-8acd-1634a7868867"
+      },
+      "execution_count": 233,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Name', 'age', 'Experience', 'Salary']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 233
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#group age and Exprience into a new feature (independent feature) using VectorAssembler\n",
+        "\n",
+        "from pyspark.ml.feature import VectorAssembler\n",
+        "featureassembler=VectorAssembler(inputCols=[\"age\", \"Experience\"], outputCol='Independent Feature')"
+      ],
+      "metadata": {
+        "id": "X7eefoytMo-R"
+      },
+      "execution_count": 234,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "output=featureassembler.transform(training)"
       ],
       "metadata": {
-        "id": "uIucSEfuZdpg"
+        "id": "tY66XxYEMpAp"
       },
-      "execution_count": 195,
+      "execution_count": 235,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "output.show()"
       ],
       "metadata": {
-        "id": "2naqlZpSZdsF"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "v8Syb7OzMpDL",
+        "outputId": "3ac5aa74-b0fb-4255-e1c3-79ca83fc807a"
       },
-      "execution_count": 195,
+      "execution_count": 236,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---------+---+----------+------+-------------------+\n",
+            "|     Name|age|Experience|Salary|Independent Feature|\n",
+            "+---------+---+----------+------+-------------------+\n",
+            "|    Krish| 31|        10| 30000|        [31.0,10.0]|\n",
+            "|Sudhanshu| 30|         8| 25000|         [30.0,8.0]|\n",
+            "|    Sunny| 29|         4| 20000|         [29.0,4.0]|\n",
+            "|     Paul| 24|         3| 20000|         [24.0,3.0]|\n",
+            "|   Harsha| 21|         1| 15000|         [21.0,1.0]|\n",
+            "|  Shubham| 23|         2| 18000|         [23.0,2.0]|\n",
+            "+---------+---+----------+------+-------------------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "finalized_data=output.select(\"Independent Feature\", \"Salary\")"
+      ],
+      "metadata": {
+        "id": "KaFQvUuHMpFs"
+      },
+      "execution_count": 239,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "finalized_data.show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "of5eKH-GHYvQ",
+        "outputId": "b30654a7-5241-4b96-e781-7e18654a58aa"
+      },
+      "execution_count": 240,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-------------------+------+\n",
+            "|Independent Feature|Salary|\n",
+            "+-------------------+------+\n",
+            "|        [31.0,10.0]| 30000|\n",
+            "|         [30.0,8.0]| 25000|\n",
+            "|         [29.0,4.0]| 20000|\n",
+            "|         [24.0,3.0]| 20000|\n",
+            "|         [21.0,1.0]| 15000|\n",
+            "|         [23.0,2.0]| 18000|\n",
+            "+-------------------+------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pyspark.ml.regression import LinearRegression\n",
+        "\n",
+        "#train test split\n",
+        "train_data,test_data=finalized_data.randomSplit([0.75,0.25])\n",
+        "regressor=LinearRegression(featuresCol='Independent Feature', labelCol='Salary')\n",
+        "regressor=regressor.fit(train_data)"
+      ],
+      "metadata": {
+        "id": "93xyatifHYxk"
+      },
+      "execution_count": 242,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#coefficient\n",
+        "regressor.coefficients"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ov8POvi9HYzy",
+        "outputId": "c2501613-fa40-43b7-dfeb-3dd3686b6887"
+      },
+      "execution_count": 243,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "DenseVector([-2000.0, 3500.0])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 243
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "regressor.intercept"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MQPAiPWXHY2R",
+        "outputId": "2b2b14c4-0e17-48a2-865b-c7764c523f82"
+      },
+      "execution_count": 244,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "57000.0000000157"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 244
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#prediction\n",
+        "pred_result=regressor.evaluate(test_data)"
+      ],
+      "metadata": {
+        "id": "0tYhmLFVHY4q"
+      },
+      "execution_count": 245,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pred_result.predictions.show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uIucSEfuZdpg",
+        "outputId": "62c93d2d-f4bd-4e87-da4d-52860ec1e38d"
+      },
+      "execution_count": 247,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/pyspark/sql/context.py:127: FutureWarning: Deprecated in 3.0.0. Use SparkSession.builder.getOrCreate() instead.\n",
+            "  FutureWarning\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-------------------+------+------------------+\n",
+            "|Independent Feature|Salary|        prediction|\n",
+            "+-------------------+------+------------------+\n",
+            "|         [21.0,1.0]| 15000|18500.000000000757|\n",
+            "|         [24.0,3.0]| 20000|19500.000000000087|\n",
+            "|         [29.0,4.0]| 20000|12999.999999997126|\n",
+            "+-------------------+------+------------------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pred_result.meanAbsoluteError,pred_result.meanSquaredError"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2naqlZpSZdsF",
+        "outputId": "686b08bb-04b0-4371-af6f-2af7bfcf8266"
+      },
+      "execution_count": 249,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(3666.666666667848, 20500000.00001515)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 249
+        }
+      ]
     },
     {
       "cell_type": "code",
